BaSP-W05-2023: Css, fixing horizontal scroll

--- a/Week-04/css/common.css
+++ b/Week-04/css/common.css
@@ -6,7 +6,7 @@ html {
     font-size: 62.5%;
 }
 body {
-    width: 100vw;
+    max-width: 100%;
     min-width: 360px;
     background-color: #535353;
     color: #fff;
